erDiagram
    AUTH_USERS ||--o| PROFILES : "1:1 (id)"
    AUTH_USERS ||--o{ USER_ROLES : "1:N (user_id)"
    AUTH_USERS ||--o{ DISPOSITIVOS : "1:N (user_id)"
    AUTH_USERS ||--o{ LINEAS : "1:N (user_id)"
    AUTH_USERS ||--o{ POPS : "1:N (user_id)"
    AUTH_USERS ||--o{ CENTROS_COSTO : "1:N (user_id)"
    AUTH_USERS ||--o{ ARCHIVOS_CARGA : "1:N (user_id)"
    AUTH_USERS ||--o{ ALERTAS : "1:N (user_id)"

    DISPOSITIVOS ||--o{ LINEAS : "0..N (imei)"
    CENTROS_COSTO ||--o{ LINEAS : "0..N (codigo=centro_costo)"
    CENTROS_COSTO ||--o{ POPS : "0..N (codigo=centro_costo)"

    AUTH_USERS {
        uuid id PK
        text email
    }

    PROFILES {
        uuid id PK_FK "REFERENCES auth.users(id)"
        text email
        text full_name
        timestamptz created_at
    }

    USER_ROLES {
        uuid id PK
        uuid user_id FK "REFERENCES auth.users(id) ON DELETE CASCADE"
        app_role role "ENUM(admin,supervisor,operador)"
        timestamptz created_at
        UNIQUE uq_user_role "(user_id, role)"
    }

    DISPOSITIVOS {
        uuid id PK
        uuid user_id FK
        text imei "NOT NULL (lógico UQ)"
        text modelo
        text fabricante
        text so
        text estado "default enrolado"
        date ultimo_checkin
        text asignado_a
        text numero_telefono
        timestamptz created_at
    }

    LINEAS {
        uuid id PK
        uuid user_id FK
        text msisdn "NOT NULL"
        text imei FK "ref lógica DISPOSITIVOS.imei"
        text iccid
        text plan
        text operador
        text centro_costo FK "ref lógica CENTROS_COSTO.codigo"
        text cod_empresa
        text nombre_cliente
        text estado "default activa"
        numeric costo_mensual
        numeric valor_plan
        numeric valor_datos
        numeric consumo_mb
        date ultimo_uso
        timestamptz created_at
    }

    POPS {
        uuid id PK
        uuid user_id FK
        text codigo "NOT NULL"
        text modelo
        text numero_telefono
        text ubicacion
        text centro_costo FK "ref lógica CENTROS_COSTO.codigo"
        text estado
        date fecha_alta
        date fecha_baja
        timestamptz created_at
    }

    CENTROS_COSTO {
        uuid id PK
        uuid user_id FK
        text codigo "NOT NULL"
        text nombre
        timestamptz created_at
    }

    ARCHIVOS_CARGA {
        uuid id PK
        uuid user_id FK
        text nombre
        text tipo "lineas|dispositivos|pops|..."
        int registros "default 0"
        text estado "default completado"
        timestamptz created_at
    }

    ALERTAS {
        uuid id PK
        uuid user_id FK
        text tipo
        text severidad "default media"
        text entidad
        text referencia
        text mensaje
        text detalle
        boolean resuelta "default false"
        timestamptz created_at
    }
